# hp

./: README.md  main.py  pyproject.toml
data/test/chroma_langchain_db/: chroma.sqlite3
reports/benchmarks/: classification_benchmarks_resnet50.csv  detection_benchmarks_resnet_50.csv  detection_benchmarks_yolo12l.csv  detection_benchmarks_yolo12m.csv  detection_benchmarks_yolo12n.csv  detection_benchmarks_yolo12s.csv  detection_benchmarks_yolo12x.csv
src/: app.py  visualization.py
src/cnn/: cnn_test.py  doc.md  onnx_test.py
src/dashboard/: doc.md
src/dashboard/callbacks/: callbacks.py
src/dashboard/components/: chatbot_button.py  sidebar.py  title_section.py  upload_form.py
src/dashboard/components/assets/: styles.css
src/dashboard/pages/: Upload_and_ask.py  about_us.py  chatbot.py  home.py  image_classifier.py  introduction_HP_case.py  introduction_constructor_goals.py  new_case_yolo_model.py  object_detection.py  resource_monitor.py  video_yolo_model.py
src/rag/: generate_vectorstore.py  rag_components.py  rag_graph.py  rag_interface.py
src/rag/llm/: llm_model.py
src/utils/: PDFprocessor02_Marisa.py  benchmark_devices.py  pdf_loader_Marisa.py  pdf_miner.py  pdf_mining_Natalia_refactored_Marisa.py  test_PDFprocessorClass_Marisa.py  util_functions.py
src/utils/image_classification/: helper_functions.py  resnet50_fp16.xml  test_benchmark.py
src/utils/object_detection/: helper_functions.py
src/utils/object_detection/yolo12n_openvino_model/: metadata.yaml
src/vis/: benchmark_plots.py  benchmark_plots_resnet.py  ressource_monitor.py
